# intelligent-content-detection

./: .gitignore  CLAUDE.md  NEW_YOLO_approach_to_implement.md  OPENROUTER_MIGRATION.md  PRD.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md
.claude/: settings.local.json
backend/: .env.example  main.py  pyproject.toml  railway.toml
backend/services/: hybrid_vision.py  image_processor.py  report_generator.py  roboflow_vision.py  utils.py  vision.py
frontend/: package.json  railway.toml  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ImageUpload.jsx  Results.jsx
