[project]
name = "backend"
version = "0.1.0"
description = "RoofScan AI - Roof damage detection backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "inference-sdk>=0.26.1",
    "openai>=2.7.2",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "roboflow>=1.2.11",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]
include = ["main.py"]
